[package]
name = "montera"
description = "JVM bytecode to WebAssembly compiler"
version = "0.1.0"
edition = "2018"
license = "MIT"

[dependencies]
anyhow = "1.0"
binaryen = "0.12.0"
clap = { version = "3.1.6", features = ["derive"] }
classfile-parser = "0.3.5"
either = "1.6.1"
env_logger = "0.9.0"
itertools = "0.10.1"
log = "0.4.14"
maplit = "1.0.2"
nom = "7"
num_cpus = "1.13.1"
wasm-encoder = "0.8.0"
wasmprinter = "0.2.31"